Create Intro Section.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d19e848ad9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>WHO AM I?</title>
 </head>
@@ -48,12 +49,42 @@
                     <h2 class="intro__suptitle">Hello i'm</h2>
                     <h1 class="intro__title">Danil Kotlaev</h1>
                     <h3 class="intro__subtitle">FRONT-END DEVELOPER</h3>
+                    <div class="social">
+                        <!--VK-->
+                        <a href="#" class="social__link"><i class="fab fa-vk" style="color: #0077ff"></i></a>
+                        <!--FACEBOOK-->
+                        <a href="#" class="social__link"><i class="fab fa-facebook-square" style="color: #1877f2"></i></a>
+                        <!--TWITTER-->
+                        <a href="#" class="social__link"><i class="fab fa-twitter" style="color: #1da1f2"></i></a>
+                        <!--INSTAGRAM-->
+                        <a href="#" class="social__link"><i class="fab fa-instagram" style="color: #912cb3"></i></a>
+                        <!--YOUTUBE-->
+                        <a href="#" class="social__link"><i class="fab fa-youtube" style="color: #ff0000"></i></a>
+                        <!--TELEGRAM-->
+                        <a href="#" class="social__link"><i class="fab fa-telegram social__link" style="color: #2fa0d1"></i></a>
+                    </div>
+                    <a class="btn" href="#">HIRE ME</a>
+                    <a class="btn" href="#">SEE MY RESUME</a>
                 </div>
-                <div class="intro__photo">
-
-                </div>
+                <img class="intro__photo" src="images/intro/photo.png" alt="">
             </div>
         </div>
     </section>
+
+<!--WORKS-->
+
+    <div class="works">
+        <div class="container">
+            <div class="works__nav">
+                <a href="#" class="works__nav-link">All</a>
+                <a href="#" class="works__nav-link">App</a>
+                <a href="#" class="works__nav-link">Websites</a>
+                <a href="#" class="works__nav-link">Interection</a>
+            </div>
+            <div class="portfolio">
+                <div class="portfolio__col"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
