Create Section About

--- a/index.html
+++ b/index.html
@@ -137,5 +137,27 @@
         </div>
     </div>
 
+<!--ABOUT-->
+
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                <div class="about__photo">
+                    <img class="img" src="images/about/designer_photo@2x.png" alt="">
+                </div>
+                <div class="about__content">
+                    <h3 class="about__title">ABOUT ME</h3>
+                    <h2 class="about__bigtitle">WHO AM I</h2>
+                    <div class="about__text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tempora soluta, a nostrum minima labore voluptates veniam quaerat quam aperiam quibusdam, officiis esse officia nisi repudiandae, ullam adipisci dolor ad?</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tempora soluta, a nostrum minima labore voluptates veniam quaerat quam aperiam quibusdam, officiis esse officia nisi repudiandae, ullam adipisci dolor ad?</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tempora soluta, a nostrum minima labore voluptates veniam quaerat quam aperiam quibusdam, officiis esse officia nisi repudiandae, ullam adipisci dolor ad?</p>
+                    </div>
+                    <a class="btn" href="#">HIRE ME</a>
+                    <a class="btn" href="#">SEE MY RESUME</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
