Create Reviews Section

--- a/index.html
+++ b/index.html
@@ -159,5 +159,29 @@
             </div>
         </div>
     </section>
+
+<!--REVIEWS-->
+
+    <div class="reviews">
+        <div class="container">
+            <div class="reviews__item">
+                <div class="reviews__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe odit fuga veritatis! Veritatis rerum ipsa quaerat. Esse quaerat dolorem, facilis, voluptatem cupiditate sunt, suscipit odit voluptas autem soluta mollitia consequatur.
+                </div>
+                <div class="reviews__author">
+                    <img class="reviews__photo" src="https://placehold.it/103/333" alt="">
+                    <div class="reviews__name">Edward M. Brooks</div>
+                    <div class="reviews__company">Marketing House</div>
+                    <div class="reviews__rating">
+                        <i class="star fas fa-star"></i>
+                        <i class="star fas fa-star"></i>
+                        <i class="star fas fa-star"></i>
+                        <i class="star fas fa-star"></i>
+                        <i class="star fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
