--- a/index.html
+++ b/index.html
@@ -183,5 +183,96 @@
             </div>
         </div>
     </div>
+
+<!--NEWS-->
+
+    <section class="news">
+        <div class="container">
+            <div class="news__header">
+                <h3 class="news__title">READ ME</h3>
+                <div class="news__text">Sometimes i write something smart</div>
+            </div>
+            <div class="articles">
+
+<!--NEW-->
+
+                <div class="articles__col">
+                    <div class="articles__item">
+                        <div class="articles__header">
+                            <time class="articles__date">
+                                10<br>JUNE
+                            </time>
+                            <a href="#">
+                                <img class="articles__photo" src="https://placehold.it/370x257/333" alt="">
+                            </a>
+                        </div>
+                        <div class="articles__content">
+                            <h4 class="articles__title">
+                                <a href="#">TEN THE BEST APP IN 2017</a>
+                            </h4>
+                            <div class="article__cat">CATEGORY </div>
+                            <div class="article__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.
+                            </div>
+                        </div>
+                        <a class="btn btn--sm" href="#">READ MORE</a>
+                    </div>
+                </div>
+
+<!--NEW-->
+
+                <div class="articles__col">
+                    <div class="articles__item">
+                        <div class="articles__header">
+                            <time class="articles__date">
+                                10<br>JUNE
+                            </time>
+                            <a href="#">
+                                <img class="articles__photo" src="https://placehold.it/370x257/333" alt="">
+                            </a>
+                        </div>
+                        <div class="articles__content">
+                            <h4 class="articles__title">
+                                <a href="#">TEN THE BEST APP IN 2017</a>
+                            </h4>
+                            <div class="article__cat">CATEGORY </div>
+                            <div class="article__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.
+                            </div>
+                        </div>
+                        <a class="btn btn--sm" href="#">READ MORE</a>
+                    </div>
+                </div>
+
+<!--NEW-->
+
+                <div class="articles__col">
+                    <div class="articles__item">
+                        <div class="articles__header">
+                            <time class="articles__date">
+                                10<br>JUNE
+                            </time>
+                            <a href="#">
+                                <img class="articles__photo" src="https://placehold.it/370x257/333" alt="">
+                            </a>
+                        </div>
+                        <div class="articles__content">
+                            <h4 class="articles__title">
+                                <a href="#">TEN THE BEST APP IN 2017</a>
+                            </h4>
+                            <div class="article__cat">CATEGORY </div>
+                            <div class="article__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.
+                            </div>
+                        </div>
+                        <a class="btn btn--sm" href="#">READ MORE</a>
+                    </div>
+                </div>
+            </div>
+            <div class="news__footer">
+                <a class="news__link" href="#">SEE MORE POSTS</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
