--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                     <h3 class="intro__subtitle">FRONT-END DEVELOPER</h3>
                     <div class="social">
                         <!--VK-->
-                        <a href="#" class="social__link"><i class="fab fa-vk" style="color: #0077ff"></i></a>
+                        <a href="#" class="social__link" target="_blank"><i class="fab fa-vk" style="color: #0077ff"></i></a>
                         <!--FACEBOOK-->
-                        <a href="#" class="social__link"><i class="fab fa-facebook-square" style="color: #1877f2"></i></a>
+                        <a href="#" class="social__link" target="_blank"><i class="fab fa-facebook-square" style="color: #1877f2"></i></a>
                         <!--TWITTER-->
-                        <a href="#" class="social__link"><i class="fab fa-twitter" style="color: #1da1f2"></i></a>
+                        <a href="#" class="social__link" target="_blank"><i class="fab fa-twitter" style="color: #1da1f2"></i></a>
                         <!--INSTAGRAM-->
-                        <a href="#" class="social__link"><i class="fab fa-instagram" style="color: #912cb3"></i></a>
+                        <a href="#" class="social__link" target="_blank"><i class="fab fa-instagram" style="color: #912cb3"></i></a>
                         <!--YOUTUBE-->
-                        <a href="#" class="social__link"><i class="fab fa-youtube" style="color: #ff0000"></i></a>
+                        <a href="#" class="social__link" target="_blank"><i class="fab fa-youtube" style="color: #ff0000"></i></a>
                         <!--TELEGRAM-->
-                        <a href="#" class="social__link"><i class="fab fa-telegram social__link" style="color: #2fa0d1"></i></a>
+                        <a href="#" class="social__link" target="_blank"><i class="fab fa-telegram" style="color: #2fa0d1"></i></a>
                     </div>
                     <a class="btn" href="#">HIRE ME</a>
                     <a class="btn" href="#">SEE MY RESUME</a>
@@ -274,5 +274,40 @@
             </div>
         </div>
     </section>
+
+<!--FOOTER-->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__credits">
+                    <div class="footer__copyright">
+                        &copy; 2018 UI43 - Free Templates
+                    </div>
+                    <div class="footer__social">
+                        <!--VK-->
+                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-vk"></i></a>
+                        <!--FACEBOOK-->
+                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        <!--TWITTER-->
+                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <!--INSTAGRAM-->
+                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <!--YOUTUBE-->
+                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <!--TELEGRAM-->
+                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-telegram"></i></a>
+                    </div>
+                </div>
+                <nav class="footer__nav">
+                    <a href="#" class="footer__nav-link">Work</a>
+                    <a href="#" class="footer__nav-link">About Me</a>
+                    <a href="#" class="footer__nav-link">Blog</a>
+                    <a href="#" class="footer__nav-link">Contact</a>
+                    <a href="#" class="footer__nav-link--btn">Hire Me</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
