Create Modal Work

--- a/index.html
+++ b/index.html
@@ -309,5 +309,45 @@
             </div>
         </div>
     </footer>
+
+<!--MADALS-->
+
+    <div class="modal" style="display: none;">
+        <div class="modal__dialog">
+            <button class="modal__close">
+                <i class="fas fa-times-circle"></i>
+            </button>
+            <div class="modal-work">
+                <div class="modal-work__preview">
+                    <img class="modal-work__photo" src="https://placehold.it/1600x1600/333" alt="">
+                </div>
+                <div class="modal-work__content">
+                    <div class="modal-work__header">
+                        <h3 class="modal-work__title">
+                            project title
+                        </h3>
+                        <div class="modal-work__info">
+                            category<span class="divider">|</span>2021
+                        </div>
+                    </div>
+                    <div class="modal-work__client">
+                        <div class="modal-work__client-title">Client: </div>
+                        <div class="modal-work__client-company">Creative Agency</div>
+                    </div>
+                    <div class="modal-work__text">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim temporibus corporis eos unde beatae corrupti, necessitatibus cumque excepturi, velit in, similique reprehenderit dolores voluptatibus doloremque? Beatae non cupiditate sint.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim temporibus corporis eos unde beatae corrupti, necessitatibus cumque excepturi, velit in, similique reprehenderit dolores voluptatibus doloremque? Beatae non cupiditate sint.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim temporibus corporis eos unde beatae corrupti, necessitatibus cumque excepturi, velit in, similique reprehenderit dolores voluptatibus doloremque? Beatae non cupiditate.
+                        </p>
+                    </div>
+                    <div class="modal-work__footer">
+                        <button class="modal-work__btn" type="button"><i class="prev fas fa-chevron-left"></i>Previous</button>
+                        <button class="modal-work__btn" type="button">Next<i class="next fas fa-chevron-right"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
