--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <i class="fas fa-times-circle"></i>
             </button>
             <div class="modal__content">
-                <h3 class="modal__title">
+                <h3 class="modal__title text-center">
                     RESUME
                 </h3>
                 <div class="text-center">
@@ -518,20 +518,51 @@
             </div>
         </div>
     </div>
-<!--FORM-->
 
-    <div class="modal">
-        <div class="modal__dialog">
+<!--CONTACT-->
+
+    <div class="modal" style="display: none;">
+        <div class="modal__dialog modal__dialog--sm">
             <button class="modal__close">
                 <i class="fas fa-times-circle"></i>
             </button>
-            <div class="modal__content">
-                <h3 class="modal__title">
-                    RESUME
-                </h3>
-
+            <div class="contact">
+                <div class="contact__left">
+                    <h3 class="modal__title mb-0">
+                        LET'S TALK!
+                    </h3>
+                    <div class="modal__subtitle">
+                        CALL ME OR SEND ME A REQUEST
+                    </div>
+                    <ul class="contact__info">
+                        <li class="contact__info-item">
+                            <i class="contact__info-icon fas fa-phone-square-alt"></i>
+                            (200) 100 3000
+                        </li>
+                        <li class="contact__info-item">
+                            <i class="contact__info-icon fas fa-envelope"></i>
+                            designer@ui43.com
+                        </li>
+                    </ul>
+                    <form class="form" action="/" method="post">
+                        <div class="form__group">
+                            <label class="label" for="input-email">Adress e-mail</label>
+                            <input class="input" type="text" name="input-email" id="input-email" placeholder="Adress e-mail">
+                        </div>
+                        <div class="form__group">
+                            <label class="label" for="input-text">Request</label>
+                            <textarea class="textarea" name="input-text" id="input-text" placeholder="Type your request..."></textarea>
+                        </div>
+                        <div class="text-right">
+                            <button class="btn" type="submit">SEND</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="contact__right">
+                </div>
             </div>
         </div>
     </div>
+
 </body>
 </html>
