--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/d19e848ad9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>WHO AM I?</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
 <!--HEADER-->
@@ -563,6 +564,9 @@
             </div>
         </div>
     </div>
+
+<!--JS-->
+
 
 </body>
 </html>
