--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     <div class="works">
         <div class="container">
             <div class="works__nav">
-                <a href="#" class="works__nav-link">All</a>
-                <a href="#" class="works__nav-link">App</a>
-                <a href="#" class="works__nav-link">Websites</a>
-                <a href="#" class="works__nav-link">Interection</a>
+                <a href="#" class="works__nav-link" data-filter="all">All</a>
+                <a href="#" class="works__nav-link" data-filter="app">App</a>
+                <a href="#" class="works__nav-link" data-filter="website">Websites</a>
+                <a href="#" class="works__nav-link" data-filter="interaction">Interaction</a>
             </div>
             <div class="portfolio">
-                <div class="portfolio__col">
+                <div class="portfolio__col" data-cat="website">
                     <div class="portfolio__item">
                         <iframe src="https://pruffit.github.io/mogo" width="370px" height="300px" frameborder="0"></iframe>
                         <div class="portfolio__item-content">
@@ -99,12 +99,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__col">
+                <div class="portfolio__col" data-cat="interaction">
                     <div class="portfolio__item">
                         <img class="portfolio__item-image" src="https://placehold.it/370x300" alt="">
                         <div class="portfolio__item-content">
                             <div class="portfolio__item-cat">
-                                Category
+                                Interaction
                             </div>
                             <div class="portfolio__item-title">
                                 Project title
@@ -115,12 +115,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__col">
+                <div class="portfolio__col" data-cat="app">
                     <div class="portfolio__item">
                         <img class="portfolio__item-image" src="https://placehold.it/370x300" alt="">
                         <div class="portfolio__item-content">
                             <div class="portfolio__item-cat">
-                                Category
+                                App
                             </div>
                             <div class="portfolio__item-title">
                                 Project title
@@ -567,6 +567,7 @@
 
 <!--JS-->
 
+    <script src="js/app.js"></script>
 
 </body>
 </html>
