--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="portfolio__col" data-cat="interaction">
                     <div class="portfolio__item">
-                        <img class="portfolio__item-image" src="https://placehold.it/370x300" alt="">
+                        <img class="portfolio__item-image" src="https://placehold.it/740x600/333" alt="">
                         <div class="portfolio__item-content">
                             <div class="portfolio__item-cat">
                                 Interaction
@@ -117,7 +117,7 @@
                 </div>
                 <div class="portfolio__col" data-cat="app">
                     <div class="portfolio__item">
-                        <img class="portfolio__item-image" src="https://placehold.it/370x300" alt="">
+                        <img class="portfolio__item-image" src="https://placehold.it/740x600/333" alt="">
                         <div class="portfolio__item-content">
                             <div class="portfolio__item-cat">
                                 App
@@ -321,7 +321,14 @@
             </button>
             <div class="modal-work">
                 <div class="modal-work__preview">
-                    <img class="modal-work__photo" src="https://placehold.it/1600x1600/333" alt="">
+                    <div data-slider="slick">
+                        <div>
+                            <img class="modal-work__photo" src="https://placehold.it/1600x1600/333" alt="">
+                        </div>
+                        <div>
+                            <img class="modal-work__photo" src="https://placehold.it/1600x1600" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-work__content">
                     <div class="modal-work__header">
@@ -344,8 +351,8 @@
                         </p>
                     </div>
                     <div class="modal-work__footer">
-                        <button class="modal-work__btn" type="button"><i class="prev fas fa-chevron-left"></i>Previous</button>
-                        <button class="modal-work__btn" type="button">Next<i class="next fas fa-chevron-right"></i></button>
+                        <button class="modal-work__btn slickPrev" type="button"><i class="prev fas fa-chevron-left"></i>Previous</button>
+                        <button class="modal-work__btn slickNext" type="button">Next<i class="next fas fa-chevron-right"></i></button>
                     </div>
                 </div>
             </div>
@@ -567,6 +574,7 @@
 
 <!--JS-->
 
+    <script src="js/slick.min.js"></script>
     <script src="js/app.js"></script>
 
 </body>
