--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                 <a href="#" class="works__nav-link" data-filter="all">All</a>
                 <a href="#" class="works__nav-link" data-filter="app">App</a>
                 <a href="#" class="works__nav-link" data-filter="website">Websites</a>
-                <a href="#" class="works__nav-link" data-filter="interaction">Interaction</a>
+                <a href="#" class="works__nav-link" data-filter="study_project">Study Project</a>
             </div>
             <div class="portfolio">
-                <div class="portfolio__col" data-cat="website">
+                <div class="portfolio__col" data-cat="study_project">
                     <div class="portfolio__item" data-modal="#modal_project_1">
                         <iframe src="https://pruffit.github.io/mogo" width="370px" height="300px" frameborder="0"></iframe>
                         <div class="portfolio__item-content">
                             <div class="portfolio__item-cat">
-                                Website
+                                Study Project
                             </div>
                             <div class="portfolio__item-title">
                                 MoGo
@@ -99,6 +99,7 @@
                         </div>
                     </div>
                 </div>
+<!--
                 <div class="portfolio__col" data-cat="interaction">
                     <div class="portfolio__item">
                         <img class="portfolio__item-image" src="https://placehold.it/740x600/333" alt="">
@@ -131,9 +132,10 @@
                         </div>
                     </div>
                 </div>
+-->
             </div>
             <div class="text-center">
-                <a class="btn btn--sm" href="#">LOAD MORE WORK</a>
+                <a class="btn btn--sm" href="#">SEE MORE WORKS</a>
             </div>
         </div>
     </div>
@@ -287,17 +289,17 @@
                     </div>
                     <div class="footer__social">
                         <!--VK-->
-                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-vk"></i></a>
+                        <a class="footer__social-link footer__social-link-V" href="#" target="_blank"><i class="fab fa-vk"></i></a>
                         <!--FACEBOOK-->
-                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        <a class="footer__social-link footer__social-link-F" href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
                         <!--TWITTER-->
-                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="footer__social-link footer__social-link-TW" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                         <!--INSTAGRAM-->
-                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="footer__social-link footer__social-link-I" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                         <!--YOUTUBE-->
-                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a class="footer__social-link footer__social-link-Y" href="#" target="_blank"><i class="fab fa-youtube"></i></a>
                         <!--TELEGRAM-->
-                        <a class="footer__social-link" href="#" target="_blank"><i class="fab fa-telegram"></i></a>
+                        <a class="footer__social-link footer__social-link-TL" href="#" target="_blank"><i class="fab fa-telegram"></i></a>
                     </div>
                 </div>
                 <nav class="footer__nav">
@@ -313,6 +315,7 @@
 
 <!--MODALS-->
 <!--WORK-->
+<!--MOGO-->
 
     <div class="modal" id="modal_project_1">
         <div class="modal__dialog">
@@ -323,31 +326,27 @@
                 <div class="modal-work__preview">
                     <div data-slider="slick">
                         <div>
-                            <img class="modal-work__photo" src="https://placehold.it/1600x1600/333" alt="">
-                        </div>
-                        <div>
-                            <img class="modal-work__photo" src="https://placehold.it/1600x1600" alt="">
+                            <iframe src="https://pruffit.github.io/mogo" width="800px" height="800px" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
                 <div class="modal-work__content">
                     <div class="modal-work__header">
                         <h3 class="modal-work__title">
-                            project title
+                            MOGO
                         </h3>
                         <div class="modal-work__info">
-                            category<span class="divider">|</span>2021
+                            Study Project<span class="divider">|</span>2021
                         </div>
                     </div>
                     <div class="modal-work__client">
-                        <div class="modal-work__client-title">Client: </div>
-                        <div class="modal-work__client-company">Creative Agency</div>
+                        <div class="modal-work__client-title"></div>
+                        <div class="modal-work__client-company"></div>
                     </div>
                     <div class="modal-work__text">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim temporibus corporis eos unde beatae corrupti, necessitatibus cumque excepturi, velit in, similique reprehenderit dolores voluptatibus doloremque? Beatae non cupiditate sint.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim temporibus corporis eos unde beatae corrupti, necessitatibus cumque excepturi, velit in, similique reprehenderit dolores voluptatibus doloremque? Beatae non cupiditate sint.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim temporibus corporis eos unde beatae corrupti, necessitatibus cumque excepturi, velit in, similique reprehenderit dolores voluptatibus doloremque? Beatae non cupiditate.
+                            It's just study website. You can follow the link and see it in all its glory. All work on the website was completed on October 24, 2021.
+                            <a href="https://pruffit.github.io/mogo/">https://pruffit.github.io/mogo/</a>
                         </p>
                     </div>
                     <div class="modal-work__footer">
