--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                     <a class="nav__link" href="#">contact</a>
                     <a class="nav__link nav__link--btn" href="#" data-modal="#modal_hire_me">hire me</a>
                 </nav>
+
+                <div class="burger">
+                    <i class="fas fa-bars burger__icon"></i>
+                </div>
             </div>
         </div>
     </header>
