--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                 </div>
-                <nav class="nav">
+                <nav class="nav" id="nav">
                     <a class="nav__link" href="#">work</a>
                     <a class="nav__link" href="#">about me</a>
                     <a class="nav__link" href="#">blog</a>
@@ -38,9 +38,9 @@
                     <a class="nav__link nav__link--btn" href="#" data-modal="#modal_hire_me">hire me</a>
                 </nav>
 
-                <div class="burger">
+                <button class="burger" type="button" id="navToggle">
                     <i class="fas fa-bars burger__icon"></i>
-                </div>
+                </button>
             </div>
         </div>
     </header>
