--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header__inner">
                 <div class="user">
                     <div class="user__avatar">
-                        <img src="https://placehold.it/57/333" alt="">
+                        <img src="http://placehold.it/57/333" alt="">
                     </div>
                     <div class="user__content">
                         <div class="user__name">
@@ -176,7 +176,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe odit fuga veritatis! Veritatis rerum ipsa quaerat. Esse quaerat dolorem, facilis, voluptatem cupiditate sunt, suscipit odit voluptas autem soluta mollitia consequatur.
                 </div>
                 <div class="reviews__author">
-                    <img class="reviews__photo" src="https://placehold.it/103/333" alt="">
+                    <img class="reviews__photo" src="http://placehold.it/103/333" alt="">
                     <div class="reviews__name">Edward M. Brooks</div>
                     <div class="reviews__company">Marketing House</div>
                     <div class="reviews__rating">
@@ -210,7 +210,7 @@
                                 10<br>JUNE
                             </time>
                             <a href="#">
-                                <img class="articles__photo" src="https://placehold.it/370x257/333" alt="">
+                                <img class="articles__photo" src="http://placehold.it/370x257/333" alt="">
                             </a>
                         </div>
                         <div class="articles__content">
@@ -235,7 +235,7 @@
                                 10<br>JUNE
                             </time>
                             <a href="#">
-                                <img class="articles__photo" src="https://placehold.it/370x257/333" alt="">
+                                <img class="articles__photo" src="http://placehold.it/370x257/333" alt="">
                             </a>
                         </div>
                         <div class="articles__content">
@@ -260,7 +260,7 @@
                                 10<br>JUNE
                             </time>
                             <a href="#">
-                                <img class="articles__photo" src="https://placehold.it/370x257/333" alt="">
+                                <img class="articles__photo" src="http://placehold.it/370x257/333" alt="">
                             </a>
                         </div>
                         <div class="articles__content">
