--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     </div>
                 </div>
                 <nav class="nav" id="nav">
-                    <a class="nav__link" href="#">work</a>
-                    <a class="nav__link" href="#">about me</a>
+                    <a class="nav__link" href="#" data-scroll="#work">work</a>
+                    <a class="nav__link" href="#" data-scroll="#about">about me</a>
                     <!--<a class="nav__link" href="#">blog</a>
                     <a class="nav__link" href="#">contact</a>-->
                     <a class="nav__link nav__link--btn" href="#" data-modal="#modal_hire_me">hire me</a>
@@ -78,7 +78,7 @@
 
 <!--WORKS-->
 
-    <div class="works">
+    <div class="works" id="work">
         <div class="container">
             <div class="works__nav">
                 <a href="#" class="works__nav-link" data-filter="all">All</a>
@@ -146,7 +146,7 @@
 
 <!--ABOUT-->
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="about__inner">
                 <div class="about__photo">
@@ -307,8 +307,8 @@
                     </div>
                 </div>
                 <nav class="footer__nav">
-                    <a href="#" class="footer__nav-link">Work</a>
-                    <a href="#" class="footer__nav-link">About Me</a>
+                    <a href="#" class="footer__nav-link" data-scroll="#work">Work</a>
+                    <a href="#" class="footer__nav-link" data-scroll="#about">About Me</a>
                     <!--<a href="#" class="footer__nav-link">Blog</a>
                     <a href="#" class="footer__nav-link">Contact</a>-->
                     <a href="#" class="footer__nav-link--btn" data-modal="#modal_hire_me">Hire Me</a>
@@ -605,14 +605,20 @@
                     <ul class="contact__info">
                         <li class="contact__info-item">
                             <i class="contact__info-icon fas fa-phone-square-alt"></i>
-                            (200) 100 3000
+                            +7 917 016 77 35
                         </li>
                         <li class="contact__info-item">
                             <i class="contact__info-icon fas fa-envelope"></i>
-                            designer@ui43.com
+                            kotlaevdanil@gmail.com
                         </li>
                     </ul>
                     <form class="form" action="/" method="post">
+                        <!-- Hidden Required Fields -->
+		                <input type="hidden" name="project_name" value="portfolio">
+		                <input type="hidden" name="admin_email" value="kotlaevdanil@gmail.com">
+		                <input type="hidden" name="form_subject" value="modal form">
+                        <!-- END Hidden Required Fields -->
+
                         <div class="form__group">
                             <label class="label" for="input-email">Adress e-mail</label>
                             <input class="input" type="text" name="input-email" id="input-email" placeholder="Adress e-mail">
