--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                             <textarea class="textarea" name="input-text" id="input-text" placeholder="Type your request..."></textarea>
                         </div>
                         <div class="text-right">
-                            <button class="btn" type="submit">SEND</button>
+                            <button class="btn" type="submit" type="submit">SEND</button>
                         </div>
                     </form>
                 </div>
