--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                             kotlaevdanil@gmail.com
                         </li>
                     </ul>
-                    <form class="form" action="/" method="post">
+                    <form class="form">
                         <!-- Hidden Required Fields -->
 		                <input type="hidden" name="project_name" value="portfolio">
 		                <input type="hidden" name="admin_email" value="kotlaevdanil@gmail.com">
