--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                             kotlaevdanil@gmail.com
                         </li>
                     </ul>
-                    <form class="form">
+                    <form class="form" action="mail.php" method="post">
                         <!-- Hidden Required Fields -->
 		                <input type="hidden" name="project_name" value="portfolio">
 		                <input type="hidden" name="admin_email" value="kotlaevdanil@gmail.com">
@@ -628,7 +628,7 @@
                             <textarea class="textarea" name="input-text" id="input-text" placeholder="Type your request..."></textarea>
                         </div>
                         <div class="text-right">
-                            <button class="btn" type="submit" type="submit">SEND</button>
+                            <button class="btn" type="submit">SEND</button>
                         </div>
                     </form>
                 </div>
