--- a/index.html
+++ b/index.html
@@ -612,13 +612,7 @@
                             kotlaevdanil@gmail.com
                         </li>
                     </ul>
-                    <form class="form" action="mail.php" method="post">
-                        <!-- Hidden Required Fields -->
-		                <input type="hidden" name="project_name" value="portfolio">
-		                <input type="hidden" name="admin_email" value="kotlaevdanil@gmail.com">
-		                <input type="hidden" name="form_subject" value="modal form">
-                        <!-- END Hidden Required Fields -->
-
+                    <form class="form" action="/" method="post">
                         <div class="form__group">
                             <label class="label" for="input-email">Adress e-mail</label>
                             <input class="input" type="text" name="input-email" id="input-email" placeholder="Adress e-mail">
