--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 -->
             </div>
             <div class="text-center">
-                <a class="btn btn--sm" href="#">SEE MORE WORKS</a>
+                <a class="btn btn--sm" href="works.html">SEE MORE WORKS</a>
             </div>
         </div>
     </div>
@@ -612,7 +612,7 @@
                             kotlaevdanil@gmail.com
                         </li>
                     </ul>
-                    <form class="form" action="/" method="post">
+                    <!--<form class="form" action="/" method="post">
                         <div class="form__group">
                             <label class="label" for="input-email">Adress e-mail</label>
                             <input class="input" type="text" name="input-email" id="input-email" placeholder="Adress e-mail">
@@ -624,7 +624,7 @@
                         <div class="text-right">
                             <button class="btn" type="submit">SEND</button>
                         </div>
-                    </form>
+                    </form>-->
                 </div>
                 <div class="contact__right">
                 </div>
