--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                     <h3 class="about__title">ABOUT ME</h3>
                     <h2 class="about__bigtitle">WHO AM I</h2>
                     <div class="about__text">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tempora soluta, a nostrum minima labore voluptates veniam quaerat quam aperiam quibusdam, officiis esse officia nisi repudiandae, ullam adipisci dolor ad?</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tempora soluta, a nostrum minima labore voluptates veniam quaerat quam aperiam quibusdam, officiis esse officia nisi repudiandae, ullam adipisci dolor ad?</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo tempora soluta, a nostrum minima labore voluptates veniam quaerat quam aperiam quibusdam, officiis esse officia nisi repudiandae, ullam adipisci dolor ad?</p>
+                        <p>Hi, my name is Danil. I am a junior front-end developer. I am engaged in adaptive and cross-browser layout.</p>
+                        <p>I like to look for interesting solutions, create the impossible with css and implement ideas in the form of websites. I am always looking for interesting solutions to complete the tasks.</p>
+                        <p>I recently switched from Adobe Photoshop to Figma and Adobe XD. I work with Git and GitHub. I adhere to the BEM methodology.</p>
                     </div>
                     <a class="btn" href="#" data-modal="#modal_hire_me">HIRE ME</a>
                     <a class="btn" href="#" data-modal="#modal_resume">SEE MY RESUME</a>
