--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 <!--WORK-->
 <!--MOGO-->
 
-    <div class="modal" id="#mogo">
+    <div class="modal" id="mogo">
         <div class="modal__dialog">
             <button class="modal__close" type="button" data-close>
                 <i class="fas fa-times-circle"></i>
@@ -379,7 +379,7 @@
     </div>
 
 <!--ActiveBox-->
-<div class="modal" id="#ActiveBox">
+<div class="modal" id="ActiveBox">
     <div class="modal__dialog">
         <button class="modal__close" type="button" data-close>
             <i class="fas fa-times-circle"></i>
